# mkgit

./: MANIFEST.in  README.markdown  README.md  ai-transcript.md  mkgit-big-site  mkgit-jblake.sh  mkgit-little-site  mkgit.1  mkgit.py  mkgit.sh  pyproject.toml
examples/: mkgit-big-site  mkgit-little-site
mkgit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
